# winSockChat

./: LICENSE  README.md
weClient/: weClient.sln
weClient/weClient/: weClient.cpp  weClient.vcxproj  weClient.vcxproj.filters
weClientCmake/: CMakeLists.txt
weClientCmake/lib/: fltkformsd.lib  fltkgld.lib  fltkimagesd.lib  fltkjpegd.lib  fltkpngd.lib  fltkzlibd.lib
weClientCmake/src/: FirstFLTK.cpp  weClientCmake.cpp
weServer/: weServer.sln
weServer/weServer/: weServer.cpp  weServer.vcxproj  weServer.vcxproj.filters
